--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,149 +1,269 @@
-/* body{
-    background-image:url(../image/bg-img.png);
-} */
-.login-form{
-    background-color:black;
-    /* opacity: 0.5; */
-
+body {
+  background-image: url(../image/bg-img.png);
 }
-.image img{
-    width: 100%;
-    height: 620px;
+.login-form {
+  /* height: 620px;
+  background-color: black;
+  opacity: 0.6; */
+}
 
-  }
-.image{
-    position: relative;
-    
+.image img {
+  width: 100%;
+  height: 620px;
+}
+.image {
+  position: relative;
 }
 /* login-form-start */
-.paper{
-    position: absolute;
-    width: 540px;
-    top: 20px;
-    left: 74px;
-    height: 570px;
-    border-radius: 40px !important;
-
+.paper {
+  position: absolute;
+  width: 540px;
+  top: 20px;
+  left: 74px;
+  height: 570px;
+  border-radius: 40px !important;
 }
-.paper p{
-    margin-top: 40px;
-    margin-left: 40px;
-    left: 10px;
-    font-size: 25px;
-    font-weight: 500;
+.paper h4 {
+  margin-top: 43px;
+  margin-left: 44px;
 }
-.paper span{
-    font-weight: bolder;
+.paper p {
+  margin-top: 40px;
+  margin-left: 80px;
+  left: 10px;
+  font-size: 25px;
+  font-weight: 500;
 }
-.paper h1{
-    /* margin-top: 25px; */
-    margin-left: 45px;
-    font-weight: 700;
-    font-size: 45px;
+.paper span {
+  font-weight: bolder;
 }
-.sign-account{
-    font-size: 12px !important;
-    color: gray;
+.paper h1 {
+  /* margin-top: 25px; */
+  margin-left: 45px;
+  font-weight: 700;
+  font-size: 45px;
 }
-.sign-up{
-    color: rgb(103, 146, 103);
-
+.sign-account {
+  margin-top: 46px;
+  font-size: 12px !important;
+  color: gray;
 }
-.form{
-    margin-left: 60px;
-    margin-top: 30px;
+.sign-up {
+  color: rgb(103, 146, 103);
 }
-.text{
-font-weight: 600;
+.form {
+  margin-left: 60px;
+  margin-top: 30px;
 }
-.input{
-    margin-top: 15px;
-    width: 390px;
-    height: 55px;
-    border-radius: 10px;
-    padding-left: 25px;
-    border: 1px solid rgb(46, 182, 245)
-    
-
+.text {
+  font-weight: 600;
 }
-.checkbox{
-    margin-top: 25px;
-    margin-left: 60px;
+.input {
+  margin-top: 15px;
+  width: 420px;
+  height: 55px;
+  border-radius: 10px;
+  padding-left: 25px;
+  border: 1px solid rgb(46, 182, 245);
 }
-.para{
-    font-size: 15px !important;
-    color: rgb(126, 186, 186);
-    font-weight: 400;
-    margin-left: 60px;
+.checkbox {
+  margin-top: 25px;
+  margin-left: 60px;
 }
-.button{
-    margin-left: 200px;
-    width: 255px;
-    height: 50px;
-    margin-top: 10px;
-    border-radius: 10px;
-    border: none;
-    background-color: black;
-    color: white;
-    font-family: 600;
-
+.para {
+  font-size: 15px !important;
+  color: rgb(126, 186, 186);
+  font-weight: 400;
+  margin-left: 60px;
+}
+.button {
+  margin-left: 230px;
+  width: 255px;
+  height: 50px;
+  margin-top: 10px;
+  border-radius: 10px;
+  border: none;
+  background-color: black;
+  color: white;
+  font-family: 600;
 }
 /* login-form-end */
 
 /* text-section-start */
-.second-section{
-    position: relative;
+
+.login-form {
+  height: 620px;
 }
-.heading{
-    
-    position: absolute;
-    top: -470px;
-    color: white;
+
+.second-section {
+  margin-top: 160px;
+  margin-left: 60px;
+  color: white;
+}
+.heading {
+  font-family: Roboto;
+  font-size: 90px;
+  font-weight: 500;
+  line-height: 105px;
+  letter-spacing: -1.796193242073059px;
+  text-align: center;
+}
+.stylrax {
+  font-family: impact, sans-serif;
+  font-size: 90px;
+  margin-left: -50px;
+}
+.stylrax img {
+  width: 569.78px;
+  height: 62.95px;
+}
+.second-para {
+  margin-top: 20px;
+  font-size: 27px;
+  font-weight: 500;
+  margin-left: -47px;
+  font-family: sans-serif;
+}
+
+@media only screen and (max-width: 1230px) {
+  .stylrax img {
+    width: 445.78px;
+    margin-left: 60px;
+  }
+  .second-para {
+    margin-left: 30px;
+    font-size: 26px;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .heading {
+    font-size: 60px;
+  }
+  .second-para {
+    margin-top: -14px;
+    font-size: 21px;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .second-section {
+    text-align: center;
+    margin-left: -500px;
+  }
+  .paper {
+    margin-top: 335px;
+    margin-left: 215px;
+  }
+  .heading {
+    margin-top: -120px;
     font-size: 80px;
-    margin-left: 90px;
+  }
 }
-.stylrax{
-    background-color:white;
-    /* color: transparent; */
-    font-family: impact, sans-serif;
-    letter-spacing:2rem;
-    color: black;
-    mix-blend-mode: screen;
-
+@media only screen and (max-width: 1045px) {
+  .paper {
+    margin-left: 185px;
+  }
 }
-.second-para{
-    position: absolute;
-    top: -260px;
-    color: white;
-    margin-left: 90px;
-    font-size: 25px;
-    font-weight: 500;
+@media only screen and (max-width: 991px) {
+  .second-section {
+    margin-left: -270px;
+  }
+  .paper {
+    margin-left: 155px;
+  }
 }
-@media only screen and (max-width:1200px){
-    .heading{
-        font-size: 60px;
-        margin-left: 140px;
-
-    }
-    .second-para{
-        font-size: 22px;
-        margin-left: 130px;
-
-    }
-    
-    
+@media only screen and (max-width: 900px) {
+  .paper {
+    margin-left: 100px;
+  }
+  .second-section {
+    margin-left: -384px;
+  }
 }
-@media only screen and (max-width:1070px){
-    .heading{
-        font-size: 50px;
-        margin-left: 190px;
+@media only screen and (max-width: 800px) {
+  .paper {
+    margin-left: 60px;
+  }
+  .second-section {
+    margin-left: -360px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .second-section {
+    margin-left: -50px;
+  }
+  .paper {
+    margin-left: 25px;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .paper {
+    margin-left: -1px;
+  }
+}
 
-    }
-    .second-para{
-        font-size: 20px;
-        margin-left: 160px;
-        margin-top: -50px;
+@media only screen and (max-width: 690px) {
+  .second-section {
+    margin-left: -35px;
+  }
+}
+@media only screen and (max-width: 670px) {
+  .paper {
+    margin-left: -10px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .paper {
+    margin-left: -42px;
+  }
+  .second-section {
+    margin-left: 0px;
+  }
+}
+@media only screen and (max-width: 570px) {
+  .second-section {
+    margin-left: 10px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  button {
+    margin-top: -15px;
+  }
+  .paper p {
+    margin-top: 11px;
+    margin-left: 345px;
+  }
+  .second-section {
+    margin-left: 70px;
+  }
+  .paper {
+    height: 600px;
+  }
+  .sign-account {
+    margin-left: 360px;
+    margin-top: -30px; 
+  }
+}
 
-    }
-
+@media only screen and (max-width: 458px) {
+  .heading {
+    font-size: 70px;
+  }
+}
+@media only screen and (max-width: 425px) {
+  .second-para {
+    font-size: 20px;
+  }
+}
+@media only screen and (max-width: 410px) {
+  .heading {
+    font-size: 50px;
+  }
+  .second-para {
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 410px) {
+  .second-para {
+    font-size: 15px;
+  }
 }
