--- a/src/assets/scss/pages/home/_login.scss
+++ b/src/assets/scss/pages/home/_login.scss
@@ -66,10 +66,13 @@
 }
 .para {
   font-size: 15px !important;
-  color: rgb(126, 186, 186);
   font-weight: 400;
   margin-left: 90px;
   margin-top: 45px;
+}
+.link-style{
+  text-decoration-line: none;
+  color: rgb(126, 186, 186);
 }
 .button {
   margin-left: 230px;
