--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,10 +1,7 @@
 body {
-  background-image: url(../image/bg-img.png);
-}
-.login-form {
-  /* height: 620px;
-  background-color: black;
-  opacity: 0.6; */
+  /* background-image: url(../image/bg-img.png); */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(100%, rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../image/bg-img.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url("../image/bg-img.png");
 }
 
 .image img {
@@ -38,7 +35,6 @@ body {
   font-weight: bolder;
 }
 .paper h1 {
-  /* margin-top: 25px; */
   margin-left: 45px;
   font-weight: 700;
   font-size: 45px;
@@ -98,7 +94,7 @@ body {
 .second-section {
   margin-top: 160px;
   margin-left: 60px;
-  color: white;
+  color: white; 
 }
 .heading {
   font-family: Roboto;
